# cpp-parcel

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Makefile  README.md  meson.build  meson.options
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  Sanitizers.cmake  parcelConfig.cmake.in
docs/: Doxyfile.in
examples/: CMakeLists.txt  README.md  cell_handle_demo.cpp  commons_demo.cpp  custom_primitive_demo.cpp  custom_struct_demo.cpp  defaults_demo.cpp  display_info_demo.cpp  ergonomics_demo.cpp  error_handling_demo.cpp  format_io_demo.cpp  hello.cpp  intrusive_struct_demo.cpp  list_demo.cpp  map_demo.cpp  meson.build  meta_demo.cpp  nested_struct_demo.cpp  primitive_demo.cpp  registry_demo.cpp  std_interop_demo.cpp  struct_demo.cpp  struct_extras_demo.cpp  struct_inheritance_demo.cpp  union_demo.cpp  union_visit_demo.cpp
examples/consumers/fetch_content/: CMakeLists.txt  README.md  main.cpp
examples/consumers/optional_adapter/: CMakeLists.txt  README.md  main.cpp
examples/consumers/optional_adapter/include/mylib/: color.h  parcel.h
include/parcel/: builtins.h  cell.h  common.h  commons.h  defaults.h  descriptor.h  error.h  format.h  json.h  json_io.h  list.h  map.h  meson.build  meta.h  parcel.h  primitive.h  registry.h  struct.h  union.h  unordered_map.h  version.h.in  walk.h
include/parcel/commons/: ability.h  audit.h  color.h  display_info.h  flag.h  icon.h  identity.h  lifecycle.h  metadata.h  origin.h  reason.h  semver.h  version_constraint.h
include/parcel/ext/: chrono.h  filesystem.h  ulid.h
subprojects/: commons.wrap  ulid.wrap
tests/: CMakeLists.txt  meson.build  test_ability.cpp  test_audit.cpp  test_cell_helpers.cpp  test_commons.cpp  test_compare.cpp  test_display_info.cpp  test_ergonomics.cpp  test_identity.cpp  test_lifecycle.cpp  test_list.cpp  test_map.cpp  test_meta.cpp  test_metadata.cpp  test_parcel.cpp  test_primitive.cpp  test_reason.cpp  test_registry.cpp  test_std_interop.cpp  test_struct.cpp  test_ulid.cpp  test_union.cpp  test_walk.cpp
