parcel_examples = {
    'parcel_hello':                   'hello.cpp',
    'parcel_primitive_demo':          'primitive_demo.cpp',
    'parcel_list_demo':               'list_demo.cpp',
    'parcel_map_demo':                'map_demo.cpp',
    'parcel_struct_demo':             'struct_demo.cpp',
    'parcel_struct_extras_demo':      'struct_extras_demo.cpp',
    'parcel_union_demo':              'union_demo.cpp',
    'parcel_registry_demo':           'registry_demo.cpp',
    'parcel_display_info_demo':       'display_info_demo.cpp',
    'parcel_error_handling_demo':     'error_handling_demo.cpp',
    'parcel_defaults_demo':           'defaults_demo.cpp',
    'parcel_custom_primitive_demo':   'custom_primitive_demo.cpp',
    'parcel_custom_struct_demo':      'custom_struct_demo.cpp',
    'parcel_nested_struct_demo':      'nested_struct_demo.cpp',
    'parcel_struct_inheritance_demo': 'struct_inheritance_demo.cpp',
    'parcel_intrusive_struct_demo':   'intrusive_struct_demo.cpp',
    'parcel_cell_handle_demo':        'cell_handle_demo.cpp',
    'parcel_format_io_demo':          'format_io_demo.cpp',
    'parcel_ergonomics_demo':         'ergonomics_demo.cpp',
    'parcel_union_visit_demo':        'union_visit_demo.cpp',
    'parcel_std_interop_demo':        'std_interop_demo.cpp',
}

foreach name, src : parcel_examples
    executable(name, src, dependencies: [parcel_dep])
endforeach
